# concurrentqueue

./: .gitignore  BUILD_C_API.md  CMakeLists.txt  build_c_api.bat  build_c_api.sh
c_api/: CMakeLists.txt  concurrentqueue_c_apiConfig.cmake.in
